fix(selection): fix selection in nest scrollbars

--- a/src/style/smooth_scrollbar.styl
+++ b/src/style/smooth_scrollbar.styl
@@ -7,6 +7,7 @@ scrollbar
   display: block
   position: relative
   overflow: hidden
+  user-select: none
 
   .scroll-content
     transform: translate3d(0, 0, 0)
